1998-11-21  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-app-helper.c (gnome_app_create_menus_custom): Move menu
	relief setting code to gnome_app.c (gnome_app_set_menus).
	(gnome_app_create_toolbar_custom): Move space size setting to
	gnome_app.c (gnome_app_set_toolbar) with change: if toolbar has
	relieved buttons, use GNOME_PAD as space size, else use
	GNOME_PAD_SMALL.
	(create_toolbar_item): Use multiple of GNOME_PAD instead of
	GNOME_PAD_BIG for separator height.

	* gnome-preferences.c (gnome_preferences_load_custom): Toolbar
	button relief default changed to "=false" to match
	GnomePreferences structure default.

	* gnome-app-helper.c (gnome_app_create_menus_custom): If menubar
	relief is set to none, set menu bar shadow type to GTK_SHADOW_NONE.
	(gnome_app_create_toolbar_custom): Remove the extra pad to toolbar
	added previously, it's not needed now that handle box doesn't have a
	relief in the case where it overlapped.

	* gnome-preferences.c (prefs =): Add default for menubar_relief as
	TRUE (i.e. unchanged behavior).  Add define for MENUBAR_RELIEF_KEY.
	(gnome_preferences_load_custom): Load for menubar relief.
	(gnome_preferences_save_custom): Save for menubar relief.
	(gnome_preferences_{get,set}_menubar_relief): New functions.

	* gnome-preferences.h: Add menubar_relief to GnomePreferences.
	Add prototypes for gnome_preferences_{get,set}_menubar_relief.

	* gnome-app.c (gnome_app_set_toolbar): If toolbar relief is set to
	none and we are using a detachable toolbar, set handle box shadow
	type to GTK_SHADOW_NONE.

	* gnome-app-helper.c (create_toolbar_item): Insert a vseparator
	with spaces if relief is set to none, rather than just a space.
	(gnome_app_create_toolbar_custom): Set toolbar space size to
	GNOME_PAD.  If relief is set to none, set border width of toolbar
	to max (3, GNOME_PAD_SMALL / 2).

Fri Nov 20 01:48:01 1998  George Lebl  <jirka@5z.com>

	* gnome-mdi.c: fix warnings about casting by using the G*_TO_*
	  macros
